syntax = "proto3";
package commands_proto;

service Commands {
  rpc Get(FrKey) returns (FrResponse);
  rpc Set(SetRequest) returns (FrResponse);
  rpc IntOperation(IntCommand) returns (FrResponse);
  rpc ListOperation(ListCommand) returns (FrResponse);
}

message FrKey {
  oneof key {
    string string_key = 1;
    bytes bytes_key = 2;
  }
}

message FrValue {
  oneof value {
    string err_value = 1;
    string string_value = 2;
    int32 int_value = 3;
    SetValue set_value = 4;
    ListValue list_value = 5;
  }
  uint64 expiry_timestamp_micros = 6;
}

message SetValue { repeated FrValue values = 1; }

message ListValue { repeated FrValue values = 1; }

message SetRequest {
  FrKey key = 1;
  FrValue value = 2;
  bool only_if_not_exists = 3;
  bool return_value = 4;
}

message FrResponse {
  bool success = 1;
  optional FrValue value = 2;
}

message IntCommand {
  FrKey key = 1;
  oneof command {
    int32 increment_by = 2;
    int32 multiply_by = 3;
  }
}

message ListCommand {
  FrKey key = 1;
  oneof command {
    FrValue append = 2;
    int32 remove_at = 3;
  }
}